--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.11"
 Flask = "^3.0.0"
 pydfs-lineup-optimizer = "^3.6.1"
+requests = "^2.31.0"
 
 
 [build-system]
