--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 Flask = "^3.0.0"
 pydfs-lineup-optimizer = "^3.6.1"
 requests = "^2.31.0"
+python-dotenv = "^1.0.0"
 
 
 [build-system]
